# magnus

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: test.yaml
src/: binding.rs  block.rs  class.rs  embed.rs  encoding.rs  enumerator.rs  error.rs  exception.rs  float.rs  gc.rs  integer.rs  lib.rs  module.rs  object.rs  r_array.rs  r_bignum.rs  r_complex.rs  r_file.rs  r_float.rs  r_hash.rs  r_match.rs  r_object.rs  r_rational.rs  r_regexp.rs  r_string.rs  r_struct.rs  r_typed_data.rs  range.rs  scan_args.rs  symbol.rs  try_convert.rs  value.rs
