[package]
name = "magnus"
version = "0.2.1"
authors = ["Mat Sadler <mat@sourcetagsandcodes.com>"]
edition = "2018"
description = "High level Ruby bindings for Rust."
keywords = ["ruby"]
categories = ["api-bindings", "development-tools::ffi"]
repository = "https://github.com/matsadler/magnus"
homepage = "https://github.com/matsadler/magnus"
documentation = "https://docs.rs/magnus/"
license = "MIT"
exclude = [".github", ".gitignore", "build-sys/"]

[workspace]
members = ["magnus-macros"]
exclude = ["examples/rust_blank/ext/rust_blank"]

[features]
embed = ["rb-sys/link-ruby"]

[dependencies]
magnus-macros = { version = "0.1.0", path = "magnus-macros" }
rb-sys = "0.8.0"

[build-dependencies]
bindgen = "0.59"

[dev-dependencies]
magnus = { path = ".", features = ["embed"] }
